test/files/neg/interop_classtags_arenot_manifests.check
interop_classtags_arenot_manifests.scala:6: error: No Manifest available for T.
    println(manifest[T])
                    ^
interop_classtags_arenot_manifests.scala:14: error: No Manifest available for T.
    println(manifest[T])
                    ^
two errors found
